Letters not visible from Icons - Fixed.

--- a/src/scss/partials/_joinus-section.scss
+++ b/src/scss/partials/_joinus-section.scss
@@ -83,6 +83,6 @@
 }
 @include mediaQueries.MobileL {
   .joinus__icon-image {
-    max-width: 200px;
+    max-width: 150px;
   }
 }
